[gd_scene load_steps=9 format=4 uid="uid://ijd8340qnv2b"]

[ext_resource type="Script" uid="uid://c2f02ku83kr5c" path="res://Editor/editor_main.gd" id="1_0by7s"]
[ext_resource type="TileSet" uid="uid://dqltvs87wbfs5" path="res://Game/mainground_tileset.tres" id="2_byuek"]
[ext_resource type="Script" uid="uid://dsug7thwo4kis" path="res://Editor/editor_ui.gd" id="2_klsmt"]
[ext_resource type="TileSet" uid="uid://bpnly4l6tgk65" path="res://Game/background_tileset.tres" id="3_52hkk"]
[ext_resource type="Texture2D" uid="uid://ba34v2ynk1h80" path="res://assets/editor/Auto_Btn1.png" id="4_52hkk"]
[ext_resource type="Texture2D" uid="uid://dm4wfaodwfrpf" path="res://assets/editor/Auto_Btn2.png" id="5_rtp05"]

[sub_resource type="Theme" id="Theme_p8nt8"]
ItemList/constants/h_separation = 20
ItemList/constants/icon_margin = 0
ItemList/constants/v_separation = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtp05"]
bg_color = Color(0.6, 0.6, 0.6, 0.301961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Editor" type="Node2D"]
script = ExtResource("1_0by7s")
MaingroundTileset = ExtResource("2_byuek")
BackgroundTileset = ExtResource("3_52hkk")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 416.0
offset_bottom = 740.0
color = Color(0, 0.259423, 0.263129, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 416.0
offset_bottom = 740.0

[node name="Mainground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAALABkAAQAEAAEAAAALABoAAQAEAAEAAAAKABoAAQAEAAEAAAAJABoAAQAEAAEAAAAIABoAAQAEAAEAAAAIABkAAQAEAAEAAAAIABgAAQAEAAEAAAAIABcAAQAEAAEAAAAIABYAAQAEAAEAAAAIABUAAQAEAAEAAAAJABQAAQAEAAEAAAAKABQAAQAEAAEAAAAKABMAAQAEAAEAAAALABMAAQAEAAEAAAAMABMAAQAEAAEAAAANABMAAQAEAAEAAAAOABMAAQAEAAEAAAAPABMAAQAEAAEAAAAQABMAAQAEAAEAAAARABQAAQAEAAEAAAASABQAAQAEAAEAAAASABUAAQAEAAEAAAATABYAAQAEAAEAAAATABcAAQAEAAEAAAATABgAAQAEAAEAAAATABkAAQAEAAEAAAATABoAAQAEAAEAAAASABsAAQAEAAEAAAASABwAAQAEAAEAAAASAB0AAQAEAAEAAAARAB4AAQAEAAEAAAAQAB8AAQAEAAEAAAAPAB8AAQAEAAEAAAAOAB8AAQAEAAEAAAANACAAAQAEAAEAAAAMACAAAQAEAAEAAAAMAB8AAQAEAAEAAAALAB4AAQAEAAEAAAAKAB4AAQAEAAEAAAAKAB0AAQAEAAEAAAAJABwAAQAEAAEAAAAJABsAAQAEAAEAAAAIABQAAQAEAAEAAAAIABMAAQAEAAEAAAAIABIAAQAEAAEAAAAJABIAAQAEAAEAAAAKABIAAQAEAAEAAAALABEAAQAEAAEAAAAMABEAAQAEAAEAAAANABEAAQAEAAEAAAAOABEAAQAEAAEAAAAPABEAAQAEAAEAAAAQABEAAQAEAAEAAAARABEAAQAEAAEAAAASABEAAQAEAAEAAAATABEAAQAEAAEAAAAUABEAAQAEAAEAAAAVABEAAQAEAAEAAAAWABEAAQAEAAEAAAAWABAAAQAEAAEAAAAVABAAAQAEAAEAAAAUAA8AAQAEAAEAAAATAA8AAQAEAAEAAAASAA4AAQAEAAEAAAARAA4AAQAEAAEAAAAQAA0AAQAEAAEAAAAPAA0AAQAEAAEAAAAOAA0AAQAEAAEAAAANAAwAAQAEAAEAAAAMAAwAAQAEAAEAAAAMAA0AAQAEAAEAAAAMAA4AAQAEAAEAAAAMAA8AAQAEAAEAAAAMABAAAQAEAAEAAAAMABIAAQAEAAEAAAANABQAAQAEAAEAAAANABUAAQAEAAEAAAANABYAAQAEAAEAAAANABcAAQAEAAEAAAANABgAAQAEAAEAAAANABkAAQAEAAEAAAANABoAAQAEAAEAAAANABsAAQAEAAEAAAAMABoAAQAEAAEAAAAKABkAAQAEAAEAAAAJABgAAQAEAAEAAAAHABcAAQAEAAEAAAAHABYAAQAEAAEAAAAGABUAAQAEAAEAAAAFABUAAQAEAAEAAAAFABQAAQAEAAEAAAAGABQAAQAEAAEAAAAHABQAAQAEAAEAAAANABIAAQAEAAEAAAAOABIAAQAEAAEAAAAPABIAAQAEAAEAAAAQABIAAQAEAAEAAAA=")
tile_set = ExtResource("2_byuek")

[node name="Background" type="TileMapLayer" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 416.0
offset_bottom = 740.0
mouse_filter = 1
mouse_default_cursor_shape = 7
script = ExtResource("2_klsmt")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="InvContainer" type="TabContainer" parent="UI/MarginContainer/VBoxContainer" groups=["InvTabContainer"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
current_tab = 0
deselect_enabled = true

[node name="MaingroundTiles" type="TabContainer" parent="UI/MarginContainer/VBoxContainer/InvContainer" groups=["InvTabContainer"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tabs_position = 1
metadata/_tab_index = 0

[node name="MaingroundTilesListContainer" type="MarginContainer" parent="UI/MarginContainer/VBoxContainer/InvContainer/MaingroundTiles" groups=["TileTerrainContainer"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 0

[node name="MaingroundTilesList" type="ItemList" parent="UI/MarginContainer/VBoxContainer/InvContainer/MaingroundTiles/MaingroundTilesListContainer" groups=["List", "TilesList"]]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_p8nt8")
max_columns = 5
icon_mode = 0
fixed_icon_size = Vector2i(50, 50)

[node name="MaingroundTerrainList" type="ItemList" parent="UI/MarginContainer/VBoxContainer/InvContainer/MaingroundTiles/MaingroundTilesListContainer" groups=["List", "TerrainList"]]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_p8nt8")
theme_override_styles/panel = SubResource("StyleBoxFlat_rtp05")
max_columns = 5
icon_mode = 0
fixed_icon_size = Vector2i(50, 50)

[node name="Control" type="Control" parent="UI/MarginContainer/VBoxContainer/InvContainer/MaingroundTiles/MaingroundTilesListContainer"]
layout_mode = 2
mouse_filter = 2

[node name="AutoTileBtn" type="CheckButton" parent="UI/MarginContainer/VBoxContainer/InvContainer/MaingroundTiles/MaingroundTilesListContainer/Control" groups=["AutoTileBtns"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -29.0
offset_right = 56.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 8
size_flags_vertical = 8
tooltip_text = "Auto Tiles:"
theme_override_icons/checked = ExtResource("4_52hkk")
theme_override_icons/unchecked = ExtResource("5_rtp05")

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
